// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaUpload 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <button
      class="button link"
      type="button"
    >
      <span
        aria-label="su-download"
        class="buttonIcon su-download"
      />
      <span
        class="text"
      >
        sulu_media.download_media
      </span>
    </button>
    <button
      class="button link"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="buttonIcon su-trash-alt"
      />
      <span
        class="text"
      >
        sulu_media.delete_media
      </span>
    </button>
  </div>,
  <div />,
]
`;

exports[`Render a SingleMediaUpload with a different image size 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <button
      class="button link"
      type="button"
    >
      <span
        aria-label="su-download"
        class="buttonIcon su-download"
      />
      <span
        class="text"
      >
        sulu_media.download_media
      </span>
    </button>
    <button
      class="button link"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="buttonIcon su-trash-alt"
      />
      <span
        class="text"
      >
        sulu_media.delete_media
      </span>
    </button>
  </div>,
  <div />,
]
`;

exports[`Render a SingleMediaUpload with an empty icon if no image is passed 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <div
      class="emptyIndicator"
    >
      <span
        aria-label="su-image"
        class="su-image"
      />
    </div>
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div />,
]
`;

exports[`Render a SingleMediaUpload with the round skin 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer round"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <button
      class="button link"
      type="button"
    >
      <span
        aria-label="su-download"
        class="buttonIcon su-download"
      />
      <span
        class="text"
      >
        sulu_media.download_media
      </span>
    </button>
    <button
      class="button link"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="buttonIcon su-trash-alt"
      />
      <span
        class="text"
      >
        sulu_media.delete_media
      </span>
    </button>
  </div>,
  <div />,
]
`;

exports[`Render a SingleMediaUpload without delete and download button 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Test
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  />,
  <div />,
]
`;
